amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/introspection-directive-argument.api.report
ModelId: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/introspection-directive-argument.api.graphql
Profile: GraphQL
Conforms: false
Number of results: 1

Level: Violation

- Constraint: http://a.ml/vocabularies/amf/parser#DomainElement-name-invalidIntrospectionName
  Message: Name must not begin with '__' as this is used exclusively by GraphQL’s introspection system
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/introspection-directive-argument.api.graphql#/declares/MyDirective/shape/default-node/property/property/__text
  Property: http://www.w3.org/ns/shacl#name
  Range: [(9,23)-(9,29)]
  Location: 
